# microservice-api

./: .gitignore  hooks.py  oas.yaml  package-lock.json  package.json  pyproject.toml
microservice_api/todo/: api.py  schemas.py  server.py
tests/: test_api.py
todo/: api.py  server.py
