[tool.poetry]
name = "microservice-api"
version = "0.1.0"
description = ""
authors = ["Daniel Pape"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.2.1"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
datamodel-code-generator = "^0.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
